Exercise 3 - Look up any Superhero

--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFO2180 LAB 4</title>
     <link rel ="stylesheet" href = "styles.css">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.o/jquery.min.js"> </script>
-    <script src="apps.js"></script>
-    <script src = "superheroes.php"></script>
+       <script src="apps.js"></script>
 </head>
 <body>
     <h1> Avengers Character Search </h1>
-    <button id="btn">search</button>
-    
+    <main>
+            <h6 >Search by Full Name or Alias</h6>
+                <form id = "getform">
+                    <input type="text" id= "hero" name = "superheroe" placeholder="e.g.captain America or Steve Rogers">
+                    <button id= "searchb" type="submit" value="search">Search</button> 
+                </form>
+
+
+        <div id="resultonshow">RESULT</div>
+        <hr>
+        <div id="result"></div>
+    </main>
+
+   
+   
+    <script src = "superheroes.php"></script>
 </body>
 </html>
